--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
+<!--template for 2019年10月30日-->
+<!--2020/2/26 15:47-->
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>electron-vue-template</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+    <meta HTTP-EQUIV="pragma" CONTENT="no-cache">
+    <meta HTTP-EQUIV="Cache-Control" CONTENT="no-store, must-revalidate">
+    <meta HTTP-EQUIV="expires" CONTENT="Wed, 26 Feb 1997 08:21:57 GMT">
+    <meta HTTP-EQUIV="expires" CONTENT="0">
+    
 </head>
 <body>
-    <h1>Welcome to electron-vue-template!</h1>
+    <div id="app"></div>
+    <script type="text/javascript" src="./js/main.562c0194.js?562c01940ac0b4b4418a"></script>
+    
 </body>
 </html>
