增加环境配置，优化打包逻辑

--- a/app/index.html
+++ b/app/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<!--template for 2019年10月30日-->
-<!--2020/3/1 14:44-->
-
-<head>
-    <meta charset="UTF-8">
-    <title>electron-vue-template</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-    <meta HTTP-EQUIV="pragma" CONTENT="no-cache">
-    <meta HTTP-EQUIV="Cache-Control" CONTENT="no-store, must-revalidate">
-    <meta HTTP-EQUIV="expires" CONTENT="Wed, 26 Feb 1997 08:21:57 GMT">
-    <meta HTTP-EQUIV="expires" CONTENT="0">
-    
-</head>
-<body>
-    <div id="app"></div>
-    <script type="text/javascript" src="./js/main.9986560c.js?9986560c7a321e60d05b"></script>
-    
-</body>
-</html>
+<!doctype html><html lang="zh-CN"><head><meta charset="UTF-8"><title>electron-vue-template</title><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><meta http-equiv="pragma" content="no-cache"><meta http-equiv="Cache-Control" content="no-store, must-revalidate"><meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT"><meta http-equiv="expires" content="0"></head><body><div id="app"></div><script src="./js/vendor.4c25216f.js?4c25216f12c3c621eb8d"></script><script src="./js/main.4c25216f.js?4c25216f12c3c621eb8d"></script><script src="./js/vendor.4c25216f.js?4c25216f12c3c621eb8d"></script><script src="./js/main.4c25216f.js?4c25216f12c3c621eb8d"></script></body></html>
